--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content class="bg-color">
-  <ion-slides #slider initialSlide="1" (ionSlideWillChange)="moveButton($event)" (swipe)="swipeEvent()">
+  <ion-slides #slider initialSlide="1" (ionSlideWillChange)="moveButton($event)" (swipe)="swipeEvent($event)">
     <ion-slide>
       <ion-grid class='gestures'>
         <ion-row>
