--- a/src/pages/episode-details/episode-details.html
+++ b/src/pages/episode-details/episode-details.html
@@ -28,19 +28,18 @@
   <div class="show-progress" *ngIf="episode">
     <div class="progress">Season {{ episode.season_number }}
       <div class="progress-bar">
-        <div class="w3-light-grey">
-          <div class="w3-grey" style="height:6px;width:25%"></div>
+        <div class="light-grey">
+          <div class="grey" [ngStyle]="{'width': seasonProgress+'%'}"></div>
         </div>
       </div>
     </div>
 
     <div class="progress">Episode {{ episode.episode_number}}
       <div class="progress-bar">
-        <div class="w3-light-grey">
-          <div class="w3-grey" style="height:6px;width:25%"></div>
+        <div class="light-grey">
+            <div class="grey" [ngStyle]="{'width': episodeProgress+'%'}"></div>
         </div>
       </div>
-
     </div>
   </div>
 
