--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>About</ion-title>
@@ -11,5 +5,14 @@
 </ion-header>
 
 <ion-content padding>
+   
+  <div class="about-container">
+    
+    
+    This app was made with lots of hours of programming, designing, testing, planning, and late nights. <br><br>
 
+    Thank you for supporting our app. Enjoy! <br><br><br>
+
+    <ion-icon name="git-branch" color="primary" (click)="redirectToGitLab()"></ion-icon>
+  </div>
 </ion-content>
