--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,12 +7,8 @@
 <ion-content padding>
    
   <div class="about-container">
-    
-    
     This app was made with lots of hours of programming, designing, testing, planning, and late nights. <br><br>
-
-    Thank you for supporting our app. Enjoy! <br><br><br>
-
-    <ion-icon name="git-branch" color="primary" (click)="redirectToGitLab()"></ion-icon>
+    Thank you for supporting our app. Enjoy!
+    <ion-icon name="custom-gitlab" (click)="redirectToGitLab()"></ion-icon>
   </div>
 </ion-content>
