--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -5,11 +5,11 @@
 </ion-header>
 
 <ion-content padding>
-    <button class="gradient-button" id="upload-button" (click)="getNotifications()" ion-button round>Notifications</button>
-    <button class="gradient-button" id="upload-button" (click)="changePassword()" ion-button round>Change
+    <button class="gradient-button" (click)="getNotifications()" ion-button round>Notifications</button>
+    <button class="gradient-button" (click)="changePassword()" ion-button round>Change
       Password</button>
-    <button class="gradient-button" id="upload-button" (click)="getAbout()" ion-button round>About</button>
-    <button class="gradient-button" id="upload-button" (click)="logOut()" ion-button round>Log Out</button>
-    <button class="gradient-button-red" id="upload-button" (click)="deleteAccount()" ion-button round>Delete
+    <button class="gradient-button" (click)="getAbout()" ion-button round>About</button>
+    <button class="gradient-button" (click)="logOut()" ion-button round>Log Out</button>
+    <button class="gradient-button-red" (click)="deleteAccount()" ion-button round>Delete
       Account</button>
 </ion-content>
