Make filter options fixed and add sroll to top

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,6 +1,6 @@
 <ion-header no-border>
   <ion-navbar>
-    <ion-title text-center>My Vault</ion-title>
+    <ion-title text-center>Search</ion-title>
   </ion-navbar>
 </ion-header>
 
