--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -1,42 +1,27 @@
 <ion-header no-border>
+    
   <ion-navbar>
-    <ion-title text-center>My Vault</ion-title>
+    <ion-title text-center>Discover</ion-title>
   </ion-navbar>
+
+  <ion-toolbar no-padding class="filter">
+    <ion-select no-padding value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
+      <ion-option value="popularity.desc">Popularity (high to low)</ion-option>
+      <ion-option value="popularity.asc">Popularity (low to high)</ion-option>
+      <ion-option value="first_air_date.desc">Newest</ion-option>
+      <ion-option value="first_air_date.asc">Oldest</ion-option>
+      <ion-option value="vote_average.desc">Top rated</ion-option>
+    </ion-select>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="toggleOptions()">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
+
+  </ion-toolbar>
 </ion-header>
 
-<ion-content padding [ngClass]="scrollerClass">
-  <ion-refresher (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content 
-      pullingIcon="arrow-dropdown" 
-      pullingText="Pull to refresh" 
-      refreshingSpinner="circles"
-      refreshingText="Refreshing...">
-    </ion-refresher-content>
-  </ion-refresher>
-
-  <ion-grid class="filter">
-    <ion-row justify-content-center align-items-center>
-      <ion-col col-3>
-        <ion-label>Sorted by</ion-label>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-select no-padding value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
-            <ion-option value="popularity.desc">Popularity (high to low)</ion-option>
-            <ion-option value="popularity.asc">Popularity (low to high)</ion-option>
-            <ion-option value="first_air_date.desc">Newest</ion-option>
-            <ion-option value="first_air_date.asc">Oldest</ion-option>
-            <ion-option value="vote_average.desc">Top rated</ion-option>
-          </ion-select>
-        </ion-item>
-
-      </ion-col>
-      <ion-col col-1>
-        <ion-icon class="filter-button" large name="options" (click)="toggleOptions()"></ion-icon>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+<body>
   <div class="options-overlay" *ngIf="showGenres">
     <ion-scroll scrollY="true">
       <ion-item>
@@ -50,22 +35,32 @@
     </ion-scroll>
   </div>
 
-  <ion-grid class='gestures' (tap)="optionsID=undefined">
-    <ion-row>
-      <ion-col col-6 col-md-4 col-lg-2 class="poster" *ngFor="let title of getResults()">
-        <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" class="poster"
-          (click)='getDetails(title.id)' />
-        <div class="icons">
-          <ion-icon *ngIf="inWatchList(title.id)" name="checkmark" color="danger"
-            (click)="removeFromWatchList(title.id)">
-          </ion-icon>
-          <ion-icon *ngIf="!inWatchList(title.id)" name="add" color="primary" (click)="addToWatchList(title)">
-          </ion-icon>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-</ion-content>
+  <ion-content padding [ngClass]="scrollerClass">
+    
+      <ion-refresher (ionRefresh)="doRefresh($event)">
+          <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles"
+            refreshingText="Refreshing...">
+          </ion-refresher-content>
+        </ion-refresher>
+
+
+    <ion-grid class='gestures' (tap)="optionsID=undefined">
+      <ion-row>
+        <ion-col col-6 col-md-4 col-lg-2 class="poster" *ngFor="let title of getResults()">
+          <img src="{{'https://image.tmdb.org/t/p/w500'+title.poster_path}}" class="poster"
+            (click)='getDetails(title.id)' />
+          <div class="icons">
+            <ion-icon *ngIf="inWatchList(title.id)" name="checkmark" color="danger"
+              (click)="removeFromWatchList(title.id)">
+            </ion-icon>
+            <ion-icon *ngIf="!inWatchList(title.id)" name="add" color="primary" (click)="addToWatchList(title)">
+            </ion-icon>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  </ion-content>
+</body>
