Styled log in screen

--- a/src/pages/episode-details/episode-details.html
+++ b/src/pages/episode-details/episode-details.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ episode?.name }}</ion-title>
+    <ion-title text-center>{{ episode?.name }}</ion-title>
   </ion-navbar>
 </ion-header>
 
