Fix the displaying of error messages in signup page

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -32,14 +32,12 @@
       </ion-item> -->
 
       <ion-row>
-        <p class="error">{{loginError}}</p>
+        <p class="error">{{signupError}}</p>
         <ion-col class="signup-col">
           <button ion-button type="submit" class="signup-button">Signup</button>
           <p>Already have an account? <button (click)="login()">Log in</button></p>
         </ion-col>
       </ion-row>
-
-
     </form>
   </div>
 </ion-content>
