--- a/src/pages/change-password/change-password.html
+++ b/src/pages/change-password/change-password.html
@@ -11,28 +11,25 @@
     <form (ngSubmit)="validateAndChangePassword()" [formGroup]="changePwForm" class="form">
 
       <ion-item class="input-field">
-        <ion-label floating color="mid">Current password</ion-label>
+        <ion-label floating>Current password</ion-label>
         <ion-input type="password" formControlName="currentPassword"></ion-input>
       </ion-item>
 
       <ion-item class="input-field">
-        <ion-label floating color="mid">New Password</ion-label>
+        <ion-label floating>New Password</ion-label>
         <ion-input type="password" formControlName="newPassword"></ion-input>
       </ion-item>
 
       <ion-item class="input-field">
-        <ion-label floating color="mid">Confirm new password</ion-label>
+        <ion-label floating>Confirm new password</ion-label>
         <ion-input type="password" formControlName="confirmNewPassword"></ion-input>
       </ion-item>
 
-      <div class="error">
-        {{error}}
-      </div>
-      <button class="button" type="submit" ion-button round>
+      <p class="error"> {{error}} </p>
+      <button class="change-pw-button" type="submit" ion-button round>
         Change password
       </button>
 
-        <!-- <button ion-button (click)="signup()" color="light" class="signup-button">Signup</button></div> -->
     </form>
   </div>
 
