Replace font in discover page

--- a/src/pages/my-vault/my-vault.html
+++ b/src/pages/my-vault/my-vault.html
@@ -12,7 +12,7 @@
   </ion-segment>
 </ion-header>
 
-<ion-content class="bg-color">
+<ion-content padding class="bg-color">
   <ion-slides #slider initialSlide="1" (ionSlideWillChange)="moveButton($event)" (swipe)="swipeEvent($event)">
     <ion-slide>
       <ion-grid class='gestures'>
