Add underline on heading, fix some styling

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,8 @@
-<ion-header>
+<ion-header no-border>
   <ion-navbar>
     <ion-title>About</ion-title>
   </ion-navbar>
+  <div no-padding class="underline"><hr></div>
 </ion-header>
 
 <ion-content padding>
