--- a/src/pages/change-password/change-password.html
+++ b/src/pages/change-password/change-password.html
@@ -1,9 +1,10 @@
-<ion-header>
-    <ion-navbar>
-        <ion-title text-center>
-          Change   password
-        </ion-title>
-      </ion-navbar>
+<ion-header no-border>
+  <ion-navbar>
+    <ion-title text-center>
+      Change password
+    </ion-title>
+  </ion-navbar>
+  <div no-padding class="underline"><hr></div>
 </ion-header>
 
 <ion-content padding>
