--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -3,6 +3,7 @@
   <ion-navbar>
     <ion-title text-center>Discover</ion-title>
   </ion-navbar>
+  <div no-padding class="underline"><hr></div>
 
   <ion-toolbar no-padding class="filter">
     <ion-select no-padding value="popularity.desc" [(ngModel)]="sort_by" (ionChange)="change_selection(sort_by)">
