--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -2,6 +2,7 @@
   <ion-navbar>
     <ion-title text-center>Search</ion-title>
   </ion-navbar>
+  <div no-padding class="underline"><hr></div>
 </ion-header>
 
 <ion-content padding>
