--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -5,7 +5,7 @@
   <div no-padding class="underline"><hr></div>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="bg-color">
   <div class="search-imdb" padding>
     <ion-searchbar #title type="search" (keyup.enter)="search(title.value)" placeholder="Search for a title..."
       clear-input=true padding>
