Style search bar

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -6,9 +6,9 @@
   </ion-header>
 
 <ion-content padding >
-  <div class="search-imdb" padding>
+  <div class="search-imdb">
     <ion-searchbar #title type="search" (keyup.enter)="search(title.value)" placeholder="Search for a title..."
-      clear-input=true padding>
+      clear-input=true>
     </ion-searchbar>
   </div>
 
