--- a/src/pages/episode-details/episode-details.html
+++ b/src/pages/episode-details/episode-details.html
@@ -5,7 +5,6 @@
 </ion-header>
 
 <ion-content class="details-bg-color">
-
   <div class="backdrop" *ngIf="episode">
     <img *ngIf="episode.still_path" [src]="'https://image.tmdb.org/t/p/original' + episode.still_path" />
   </div>
@@ -18,8 +17,8 @@
     </div>
 
     <div class="button">
-      <button ion-button icon-only clear large (click)="getDetails(show.id)">
-        <ion-icon name="ios-share-outline"></ion-icon>
+      <button ion-button icon-only clear large (click)="shareEpisode(epsiode)">
+        <ion-icon name="custom-share"></ion-icon>
       </button>
     </div>
 
