Final fix of styling issues

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,4 +1,4 @@
-<ion-content class="signup-content" padding>
+<ion-content class="signup-content" padding no-bounce>
 
   <ion-row class="logo-row">
     <ion-col></ion-col>
