--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -3,7 +3,7 @@
   <ion-row class="logo-row">
     <ion-col></ion-col>
     <ion-col width-67>
-      <ion-icon name="icon6"></ion-icon>
+      <ion-icon name="vault-logo"></ion-icon>
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
