--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs [selectedIndex]="myIndex">
-    <ion-tab [root]="tab1Root"  tabIcon="custom-icon1"></ion-tab>
-    <ion-tab [root]="tab2Root"  tabIcon="custom-icon2"></ion-tab>
-    <ion-tab [root]="tab3Root"  tabIcon="custom-icon3"></ion-tab>
-    <ion-tab [root]="tab4Root"  tabIcon="custom-icon5"></ion-tab>
+    <ion-tab [root]="tab1Root"  tabIcon="custom-vault"></ion-tab>
+    <ion-tab [root]="tab2Root"  tabIcon="custom-discover"></ion-tab>
+    <ion-tab [root]="tab3Root"  tabIcon="custom-search"></ion-tab>
+    <ion-tab [root]="tab4Root"  tabIcon="custom-settings"></ion-tab>
   </ion-tabs>
   
