--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,4 @@
-<ion-content class="login-content" padding no-bounce>
+<ion-content class="login-content" padding>
   <ion-row class="logo-row">
     <ion-col></ion-col>
     <ion-col width-67>
